# TinyLang

./: .gitignore  README.md  example.tl
compiler/: CMakeLists.txt
compiler/examples/: factorial.tl  fib.tl  simple_input.tl  test_crash.tl  test_error.tl  test_lex.tl  two_inputs.tl  v2_test.tl  v3_test.tl
compiler/scripts/: build_compiler.sh
compiler/src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  driver.cpp  lexer.cpp  lexer.hpp  optimizer.cpp  optimizer.hpp  parser.cpp  parser.hpp  semantic.cpp  semantic.hpp
docs/: compiler_usage.md  getting_started.md  spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: run.ts
frontend/src/components/: DocsPane.tsx  EditorLayout.tsx
frontend/src/data/: docsContent.ts
scripts/: build_all.sh  build_and_run.sh  run_local.sh
server/app/: main.py
